# langgraph-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  langgraph.json  product.md  pyproject.toml  structure.md  tech.md
.github/workflows/: ci.yml
src/langgraph_demo/: __init__.py  nodes.py  state.py  tracing.py
src/langgraph_demo/agents/: performance_reviewer.py  security_reviewer.py  style_reviewer.py
src/langgraph_demo/data/: seed_knowledge.py  seed_rules.py
src/langgraph_demo/data/sample_diffs/: __init__.py  mixed_issues.diff  security_issues.diff  style_issues.diff
src/langgraph_demo/examples/: 01_simple_reviewer.py  02_multi_agent.py  03_full_pipeline.py  04_git_review.py
src/langgraph_demo/tools/: git_diff.py  knowledge_rag.py  rules_db.py
tests/: test_full_pipeline.py
tests/integration/: test_pipeline_streaming.py
