[project]
name = "langgraph-demo"
version = "0.1.0"
description = "LangGraph Code Review Pipeline - Progressive learning demo"
readme = "README.md"
authors = [
    { name = "jrollin", email = "1086565+jrollin@users.noreply.github.com" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-ollama>=0.3",
    "langchain-chroma>=0.2",
    "chromadb>=1.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
